scripts/hook_debug.log
09:54:56 [FAIL-CLOSED] Core governance unavailable: unexpected indent (hook.py, line 2)
09:54:56 Traceback (most recent call last):
  File "/Users/haotianliu/.openclaw/workspace/ystar-company/scripts/hook_wrapper.py", line 45, in <module>
    from ystar.adapters.hook import check_hook
  File "/Users/haotianliu/.openclaw/workspace/Y-star-gov/ystar/__init__.py", line 79, in <module>
    from .adapters.hook import check_hook   # 轻量 hook 适配层（1-D）
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/haotianliu/.openclaw/workspace/Y-star-gov/ystar/adapters/hook.py", line 2
    _run_orchestrator(who, tool_name, params, decision, session_cfg)
IndentationError: unexpected indent

09:54:56 [FAIL-CLOSED] Could not write CIEU deny event: No module named 'ystar.governance.identity_detector'
09:55:16 [FAIL-CLOSED] Core governance unavailable: unexpected indent (hook.py, line 2)
09:55:16 Traceback (most recent call last):
  File "/Users/haotianliu/.openclaw/workspace/ystar-company/scripts/hook_wrapper.py", line 45, in <module>
    from ystar.adapters.hook import check_hook
  File "/Users/haotianliu/.openclaw/workspace/Y-star-gov/ystar/__init__.py", line 79, in <module>
    from .adapters.hook import check_hook   # 轻量 hook 适配层（1-D）
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/haotianliu/.openclaw/workspace/Y-star-gov/ystar/adapters/hook.py", line 2
    _run_orchestrator(who, tool_name, params, decision, session_cfg)
IndentationError: unexpected indent

09:55:16 [FAIL-CLOSED] Could not write CIEU deny event: No module named 'ystar.governance.identity_detector'
